# lynara-launcher-v2

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  auth.rs  lib.rs  main.rs
src-tauri/src/minecraft/: downloader.rs  fabric.rs  installer.rs  java.rs  launcher.rs  manifest.rs  mod.rs  paths.rs
src/components/: UpdateChecker.tsx
src/components/layout/: AnimatedBackground.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: LogoMark.tsx
src/lib/: auth.ts  minecraft.ts
src/pages/: Home.tsx  Login.tsx  News.tsx  Settings.tsx  Shaders.tsx
src/stores/: auth.ts  game.ts
